@@ -313,6 +313,8 @@ Various bugfixes, small features, and a few experimental things:
 * Fixed a bug in Special:Contributions that caused the namespace selection to
   be forgotten between submits
 * Special:Watchlist/edit now has namespace subheadings
+* (bug 1714) the "Save page" button now has right margin to seperate it from
+  "Show preview" and "Show changes"
 
 === Caveats ===
 
